src/main/java/org/example/expert/config/error/AuthException.java
package org.example.expert.config.error;

public class AuthException extends RuntimeException {

    public AuthException(String message) {
        super(message);
    }
}
